# lbt_qt_code

./: README.md
FreqAllocator-0.1.666/: README.md  main.py
FreqAllocator-3.2/: main.py  setup.py  train.py
FreqAllocator-3.3/: train.py
FreqAllocator-3.4/: train.py
FreqAllocator-3.5/: datarec.py  main.py  train.py
FreqAllocator-4.0/: main.py  train.py
FreqAllocator-4.0/FreqAllocatorCpp/Pybinder/: CMakeLists.txt
FreqAllocator-4.0/FreqAllocatorCpp/src/: CMakeLists.txt  single_qubit_model.h
FreqAllocator-5.0/: .gitignore  CMakeLists.txt  main.py  setup.py  train.py
chemi/: XEB.py  anyq_run_cirq.py  chemi origin step1.py  chemi origin step12.py  chemi origin step2.py  chemi qt.py  chemi tc.py  chemi.py  originq_cloud_config.json  originq_cloud_config1.json  params.txt  readxeb.py  scf.py  slsqp_break_point.json  xeb_file.txt  xeb_file2.txt  xeb_file3.txt
chip design/: chip design.sln
chipdesignv2/: chipdesignv2.sln
chipdesignv5/: chipdesignv2.sln
chipdesignv9/: 中文方案.docx
coupler exp/: 观察比特实验处理.ipynb
finance/: Homework #4.xlsx  hw.xlsx
fir/: .gitignore  20240530_组会报告_王鹏.pptx  __init__.py  c1-2.rar  chip_dict2yaml.py  chip_param.yaml
freqalloc 72 bit tqg v2/: freqalloc 72.py
freqalloc 72 bit tqg v3/: freqalloc 72.py
freqalloc 72 bit tqg v4/: freqalloc 72.py
freqalloc 72 bit tqg v5/: 1 qubit.ipynb  freqalloc 72.py  rabi测串扰系数.xlsx  xtalk.py  xy data.txt
freqalloc 72 bite two q gate/: freqalloc 72.py
freqalloc 72 bite v global reopt gauss/: 20230321 H2芯片数据分析第四轮(1).xlsx  draw.py  freqalloc 72.py
freqalloc cp/: draw xaqc.py  draw.py  (+2 more)
(+10543 files in other folders)
